NEWS file for PEL: PHP Exif Library.  A library with support for
reading and writing Exif headers in JPEG and TIFF images using PHP.

Copyright (C) 2004, 2005, 2006  Martin Geisler.
Licensed under the GNU GPL, see COPYING for details.


PEL Version 0.9.1  (not released yet)
*************************************

Notes:

Added setExif(), getExif(), and clearExif() methods as a convenient
and recommended way of manipulating the Exif data in a PelJpeg object.
Improved PelEntryTime to deal with timestamps in the full range from
year 0 to year 9999. Removed PelTag::getDescription() because the
descriptions were out of context. A new example demonstrates how to
resize images while keeping the Exif data intact. Added a Japanese and
updated the French and Danish translations.

Changes:

* The constructors of PelJpeg and PelTiff can now take an argument
  which is used for initialization. This can be a filename (equivalent
  to calling loadFromFile()), a PelDataWindow (equivalent to load()).
  The PelJpeg constructor will also accept an image resource.

* Added PelJpeg::setExif(). This method should always be used in
  preference to PelJpeg::insertSection() and PelJpeg::appendSection().
  One should actually not be using appendSection() unless one is very
  sure that the image has not been ended by a EOI marker.

* Added PelJpeg::getExif().  This method is the new preferred way of
  obtaining the PelExif object from a PelJpeg object.  Updated the
  examples and code to make use of it.

* An example of how to resize images while keeping the Exif data
  intact is given in resize.php.

* The PelTag::getDescription() method is no more. The descriptions
  were taken directly from the Exif specification and they were often
  impossible to translate in a meaningful out of context because they
  had references to figures and tables from said specification.

* Fixed bug in edit-description.php which still called the constructor
  of PelIfd in the old pre-0.9 way.
